--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Social Network</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
-
+<body class="bg-black">
+    <nav class="mt-1">
+        <div class="flex justify-between items-center text-white p-4">
+            <div class="text-xl font-bold pl-4">Social Network</div>
+            <div class="flex space-x-6">
+                <a href="#" class="hover:text-gray-300">Work</a>
+                <a href="#" class="hover:text-gray-300">Pricing</a>
+                <a href="#" class="hover:text-gray-300">Benfits</a>
+            </div>
+            <div class="space-x-4 pr-4">
+                <a href="#" class="hover:text-gray-300">Login</a>
+                <button class="py-2 px-4 rounded-full border-white border-2"><a href="#">Buy Plan</a></button>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
