--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             </div>
         </div>
     </nav>
+    <div class="flex justify-center items-center h-screen">
+        <div class="text-center text-white">
+            <h1 class="text-4xl font-bold mb-4">Unlimited Design, <br>
+                Single Monthly Charge</h1>
+            <p class="text-lg mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis asperiores dolore
+                <br>
+                quam similique sequi voluptates distinctio illo veniam beatae iure culpa quod cupiditate, nemo odit</p>
+            <button class="bg-blue-700 py-3 px-7 rounded-full"><a href="#">Our
+                    Pricing</a></button>
+            <p class="text-lg mb-8">Lorem ipsum dolor sit amet consec </p>
+        </div>
+    </div>
 </body>
 
 </html>
