--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <img src="assets/senati.webp" " class="h-10 opacity-90" />
     <img src="assets/tecsup.webp"  class="h-10 opacity-90" />
     </div>
-    </div>
+    </div>a
 </section>
 
 </body >
