--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <img src="assets/senati.webp" " class="h-10 opacity-90" />
     <img src="assets/tecsup.webp"  class="h-10 opacity-90" />
     </div>
-    </div>a
+    </div>
 </section>
 
 =======
