--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<<<<<<< Updated upstream <body class="bg-[url('./background.png')] bg-cover bg-center">
+<body class="bg-[url('./background.png')] bg-cover bg-center">
     <nav class="mt-1">
         <div class="flex justify-between items-center text-white p-4">
             <div class="text-xl font-bold pl-4">Social Network</div>
@@ -35,34 +35,24 @@
             <p class="text-lg mb-8">test test test </p>
         </div>
     </div>
-    </body>
-    =======
+</body>
 
-    <body>
+<section class="py-12 border-t border-gray-800">
+    <div class="max-w-5xl mx-auto text-center px-4">
 
+        <p class="text-sm text-gray-400 uppercase tracking-widest mb-6">
+            Trusted By Startups &amp; Fortune 500
+        </p>
 
-
-
-
-        <section class="py-12 border-t border-gray-800">
-            <div class="max-w-5xl mx-auto text-center px-4">
-
-                <p class="text-sm text-gray-400 uppercase tracking-widest mb-6">
-                    Trusted By Startups &amp; Fortune 500
-                </p>
-
-                <div class="flex items-center justify-center flex-wrap gap-8">
-                    <img src="assets/cibertec.webp" class="h-25 opacity-90" />
-                    <img src="assets/idat.webp" class="h-15 opacity-90" />
-                    <img src="assets/ipm.webp" class="h-12 opacity-90" />
-                    <img src="assets/isil.webp" class="h-15 opacity-90" />
-                    <img src="assets/senati.webp" " class=" h-10 opacity-90" />
-                    <img src="assets/tecsup.webp" class="h-10 opacity-90" />
-                </div>
-            </div>
-        </section>
-
-    </body>
-    >>>>>>> Stashed changes
+        <div class="flex items-center justify-center flex-wrap gap-8">
+            <img src="assets/cibertec.webp" class="h-25 opacity-90" />
+            <img src="assets/idat.webp" class="h-15 opacity-90" />
+            <img src="assets/ipm.webp" class="h-12 opacity-90" />
+            <img src="assets/isil.webp" class="h-15 opacity-90" />
+            <img src="assets/senati.webp" " class=" h-10 opacity-90" />
+            <img src="assets/tecsup.webp" class="h-10 opacity-90" />
+        </div>
+    </div>
+</section>
 
 </html>
