--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body class="bg-[url('./background.png')] bg-cover bg-center">
@@ -25,7 +26,7 @@
     </nav>
     <div class="flex justify-center items-center h-screen">
         <div class="text-center text-white">
-            <h1 class="text-4xl font-bold mb-4">Unlimited Design, <br>
+            <h1 class="text-8xl mb-4 font-mi-fuente">Unlimited Design, <br>
                 Single Monthly Charge</h1>
             <p class="text-lg mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis asperiores dolore
                 <br>
@@ -37,7 +38,7 @@
     </div>
 </body>
 
-<section class="py-12 border-t border-gray-800">
+<section class="py-12 border-t border-gray-800 bg-black">
     <div class="max-w-5xl mx-auto text-center px-4">
 
         <p class="text-sm text-gray-400 uppercase tracking-widest mb-6">
