The Texts Were Changed, Change Of Logos In The Footer

--- a/index.html
+++ b/index.html
@@ -14,46 +14,62 @@
         <div class="flex justify-between items-center text-white p-4">
             <div class="text-xl font-bold pl-4">Social Network</div>
             <div class="flex space-x-6">
-                <a href="#" class="hover:text-gray-300">Work</a>
-                <a href="#" class="hover:text-gray-300">Pricing</a>
-                <a href="#" class="hover:text-gray-300">Benfits</a>
+                <a href="#" class="hover:text-gray-300">Discover</a>
+                <a href="#" class="hover:text-gray-300">Create Event</a>
+                <a href="#" class="hover:text-gray-300">My Network</a>
             </div>
             <div class="space-x-4 pr-4">
                 <a href="#" class="hover:text-gray-300">Login</a>
-                <button class="py-2 px-4 rounded-full border-white border-2"><a href="#">Buy Plan</a></button>
+                <button class="py-2 px-4 rounded-full border-white border-2"><a href="#">Get Started</a></button>
             </div>
         </div>
     </nav>
     <div class="flex justify-center items-center h-screen">
         <div class="text-center text-white">
-            <h1 class="text-8xl mb-4 font-mi-fuente">Unlimited Design, <br>
-                Single Monthly Charge</h1>
-            <p class="text-lg mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis asperiores dolore
-                <br>
-                quam similique sequi voluptates distinctio illo veniam beatae iure culpa quod cupiditate, nemo odit</p>
-            <button class="bg-blue-700 py-3 px-7 rounded-full"><a href="#">Our
-                    Pricing</a></button>
-            <p class="text-lg mb-8">test test test </p>
+            <h1 class="text-7xl mb-4 font-mi-fuente leading-tight">
+            Connect Through <br> Unforgettable Events
+            </h1>
+            <p class="text-lg mb-8 max-w-2xl mx-auto">
+            Discover, organize, and share events with people from your city and around the world.  
+            oin a vibrant community that lives every moment to the fullest.
+            </p>
+            <button class="bg-blue-700 py-3 px-7 rounded-full hover:bg-blue-600 transition">
+            <a href="#">Browse Upcoming Events</a>
+            </button>
+            <p class="mt-4 text-gray-300 text-sm">
+            Create your free profile and start exploring today.
+            </p>
         </div>
     </div>
 </body>
 
-<section class="py-12 border-t border-gray-800 bg-black">
-    <div class="max-w-5xl mx-auto text-center px-4">
 
+    <section class="flex flex-col items-center text-center px-4 py-20">
+    <div class="flex items-center gap-3 mt-8">
+    <img src="assets/face1.webp" alt="client" class="w-18 h-18 rounded-full  border-black -ml-2" />
+    <img src="assets/face2.webp" alt="client" class="w-18 h-18 rounded-full  border-black -ml-2" />
+    <span class="text-yellow-400 text-2xl ">★★★★★</span>
+    <span class="text-lg text-gray-300">Rated 5.0 on clutch</span>
+    </div>
+    </section>
+
+<footer>
+<section class="relative py-12 bg-gradient-to-b from-transparent to-black">
+        <div class="max-w-5xl mx-auto text-center px-4">
         <p class="text-sm text-gray-400 uppercase tracking-widest mb-6">
-            Trusted By Startups &amp; Fortune 500
+            Trusted by Leading Institutions
         </p>
 
         <div class="flex items-center justify-center flex-wrap gap-8">
             <img src="assets/cibertec.webp" class="h-25 opacity-90" />
-            <img src="assets/idat.webp" class="h-15 opacity-90" />
+            <img src="assets/idat.webp" class="h-19 opacity-90" />
             <img src="assets/ipm.webp" class="h-12 opacity-90" />
-            <img src="assets/isil.webp" class="h-15 opacity-90" />
-            <img src="assets/senati.webp" " class=" h-10 opacity-90" />
-            <img src="assets/tecsup.webp" class="h-10 opacity-90" />
+            <img src="assets/isil.webp" class="h-23 opacity-90" />
+            <img src="assets/senati.webp" " class=" h-11 opacity-90" />
+            <img src="assets/tecsup.webp" class="h-11 opacity-90" />
         </div>
     </div>
+    </footer>
 </section>
 
 </html>
