--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Social Network</title>
 </head>
 
-<body class="bg-[url('./assets/background.png')] bg-cover bg-center">
+<body class="bg-[url('/assets/background.png')] bg-cover bg-center">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
