--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="assets/img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Social Network</title>
+  <title>BrainHub - Nueva Plataforma</title>
 </head>
 
-<body class="bg-[url('/assets/background.png')] bg-cover bg-center">
+<body class="bg-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
