--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="assets/img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrainHub - Nueva Plataforma</title>
+  <title>BrainHub - Descubre nuevos eventos</title>
 </head>
 
 <body class="bg-black">
