--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>BrainHub - Descubre nuevos eventos</title>
 </head>
 
-<body class="bg-black">
+<body class="">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
